--- a/index.html
+++ b/index.html
@@ -137,6 +137,202 @@
         </ul>
         <img src="./images/collaboration-img-2.png" alt="Image-folder" />
       </section>
+
+      <section>
+        <h2>Quick & Easy Process</h2>
+        <p>
+          Do you require some help for your project: Conception workshop,
+          prototyping, marketing strategy, landing page, Ux/UI?
+        </p>
+        <ul>
+          <li>
+            <img src="./images/avatar/avatar-1.png" alt="avatar-1" width="98" />
+            <p>I can take care of your pitch</p>
+          </li>
+          <li>
+            <p>I can prototype your app</p>
+            <img src="./images/avatar/avatar-2.png" alt="avatar-2" width="98" />
+          </li>
+          <li>
+            <p>I can take care of your pitch</p>
+            <img src="./images/avatar/avatar-3.png" alt="avatar-3" width="98" />
+          </li>
+          <li>
+            <img src="./images/avatar/avatar-4.png" alt="avatar-4" width="98" />
+            <p>I can help marketing strategy</p>
+          </li>
+        </ul>
+        <button type="button">Contact our expert</button>
+      </section>
+
+      <section>
+        <h2>Contents Strategies</h2>
+        <p>
+          We focus on ergonomics and meeting you where you work. It's only a
+          keystroke away.
+        </p>
+        <ul>
+          <li>
+            <img
+              src="./images/contents/content-1.jpg"
+              alt="Laptop"
+              width="350"
+            />
+            <p>By Wahid Ari | 03 March 2019</p>
+            <h3>Increasing Prosperity With Positive Thinking</h3>
+          </li>
+          <li>
+            <img
+              src="./images/contents/content-2.jpg"
+              alt="office"
+              width="350"
+            />
+            <p>By Wahid Ari | 03 March 2019</p>
+            <h3>Motivation Is The First Step To Success</h3>
+          </li>
+          <li>
+            <img
+              src="./images/contents/content-3.jpg"
+              alt="building"
+              width="350"
+            />
+            <p>By Wahid Ari | 03 March 2019</p>
+            <h3>Success Steps For Your Personal Or Business</h3>
+          </li>
+        </ul>
+      </section>
+
+      <section>
+        <h2>Price Table</h2>
+        <p>We offer competitive price</p>
+        <ul>
+          <li>
+            <h3>Free</h3>
+            <p>Brief price description</p>
+            <p>0</p>
+            <p>$</p>
+            <p>Per / month</p>
+            <ul>
+              <li>
+                <p>Only 2 Operators</p>
+              </li>
+              <li>
+                <p>Notifications</p>
+              </li>
+              <li>
+                <p>Landing Pages</p>
+              </li>
+            </ul>
+            <button type="button">Order Now</button>
+          </li>
+          <li>
+            <h3>Standard</h3>
+            <p>Brief price description</p>
+            <p>5</p>
+            <p>$</p>
+            <p>Per / month</p>
+            <ul>
+              <li>
+                <p>5+ Operators</p>
+              </li>
+              <li>
+                <p>Notifications</p>
+              </li>
+              <li>
+                <p>Landing Pages</p>
+              </li>
+            </ul>
+            <button type="button">Order Now</button>
+          </li>
+          <li>
+            <h3>Premium</h3>
+            <p>Brief price description</p>
+            <p>10</p>
+            <p>$</p>
+            <p>Per / month</p>
+            <ul>
+              <li>
+                <p>10+ Operators</p>
+              </li>
+              <li>
+                <p>Notifications</p>
+              </li>
+              <li>
+                <p>Landing Pages</p>
+              </li>
+            </ul>
+            <button type="button">Order Now</button>
+          </li>
+        </ul>
+      </section>
+
+      <section>
+        <h2>What Clients Say</h2>
+        <p>
+          Problems trying to resolve the conflict between the two major realms
+          of Classical physics: Newtonian mechanics
+        </p>
+        <ul>
+          <li>
+            <p>
+              Product helps you see how many more days you need to work to reach
+              your financial goal. Product helps you see how many more days you
+              need to work to reach your financial goal. Product helps you see
+              how many more days you need to work to reach your financial goal.
+            </p>
+            <img
+              src="./images/designers/des-1.png"
+              alt="Wahid Ari"
+              width="50"
+            />
+            <p>Wahid Ari</p>
+            <p>Designer</p>
+          </li>
+          <li>
+            <p>
+              Product helps you see how many more days you need to work to reach
+              your financial goal. Product helps you see how many more days you
+              need to work to reach your financial goal. Product helps you see
+              how many more days you need to work to reach your financial goal.
+            </p>
+            <img
+              src="./images/designers/des-2.png"
+              alt="Wahid Ari"
+              width="50"
+            />
+            <p>Wahid Ari</p>
+            <p>Designer</p>
+          </li>
+          <li>
+            <p>
+              Product helps you see how many more days you need to work to reach
+              your financial goal. Product helps you see how many more days you
+              need to work to reach your financial goal. Product helps you see
+              how many more days you need to work to reach your financial goal.
+            </p>
+            <img
+              src="./images/designers/des-3.png"
+              alt="Wahid Ari"
+              width="50"
+            />
+            <p>Wahid Ari</p>
+            <p>Designer</p>
+          </li>
+        </ul>
+      </section>
+
+      <section>
+        <h2 hidden>Promo</h2>
+        <p>Join 100 Compannies who boost their business with Product</p>
+        <img src="./images/graphics-2.png" alt="screen" width="351" />
+        <button type="button">Get This</button>
+      </section>
     </main>
+
+    <footer>
+      <a href="./index.html"
+        ><img src="./images/logo-2.png" alt="logo" width="40" />Product</a
+      >
+    </footer>
   </body>
 </html>
