--- a/index.html
+++ b/index.html
@@ -333,6 +333,33 @@
       <a href="./index.html"
         ><img src="./images/logo-2.png" alt="logo" width="40" />Product</a
       >
+      <p>Resource</p>
+      <ul>
+        <li>
+          <p>About Us</p>
+        </li>
+        <li>
+          <p>Blog</p>
+        </li>
+        <li>
+          <p>Contact</p>
+        </li>
+        <li>
+          <p>FAQ</p>
+        </li>
+      </ul>
+      <p>Legal Stuff</p>
+      <ul>
+        <li>
+          <p>Disclaimer</p>
+        </li>
+        <li>
+          <p>Financing</p>
+        </li>
+        <li>
+          <p>Privacy Policy</p>
+        </li>
+      </ul>
     </footer>
   </body>
 </html>
