--- a/resources.html
+++ b/resources.html
@@ -23,6 +23,17 @@
         <li><button type="button">Sign Up</button></li>
       </ul>
     </header>
-    Im resources
+
+    <main>
+      <section>
+        <h1>Our Clients</h1>
+        <ul>
+          <li><img src="" alt="" /></li>
+          <li><img src="" alt="" /></li>
+          <li><img src="" alt="" /></li>
+          <li><img src="" alt="" /></li>
+        </ul>
+      </section>
+    </main>
   </body>
 </html>
