--- a/customers.html
+++ b/customers.html
@@ -28,12 +28,181 @@
       <section>
         <h1>Our Clients</h1>
         <ul>
-          <li><img src="" alt="" /></li>
-          <li><img src="" alt="" /></li>
-          <li><img src="" alt="" /></li>
-          <li><img src="" alt="" /></li>
+          <li>
+            <img
+              src="./images/clients-logo/Airbnb Logo.png"
+              alt="Airbnb Logo"
+              width="159"
+            />
+          </li>
+          <li>
+            <img
+              src="./images/clients-logo/Google Logo.png"
+              alt="Google Logo"
+              width="146"
+            />
+          </li>
+          <li>
+            <img
+              src="./images/clients-logo/Microsoft Logo.png"
+              alt="Microsoft Logo"
+              width="213"
+            />
+          </li>
+          <li>
+            <img
+              src="./images/clients-logo/FedEx Logo.png"
+              alt="FedEx Logo"
+              width="140"
+            />
+          </li>
         </ul>
       </section>
+
+      <section>
+        <h2>Why Choose Product?</h2>
+        <ul>
+          <li>
+            <h3>Special Business</h3>
+            <p>
+              Product helps you see how many more days you need to work to reach
+              your financial goal for the month and year. Product helps you see
+              how many more days you need to work to reach your financial goal
+              for the month and year. Product helps you see how many more days
+              you need to work to reach your financial goal for the month and
+              year.
+            </p>
+          </li>
+          <li>
+            <h3>Instant Result</h3>
+            <p>
+              Product helps you see how many more days you need to work to reach
+              your financial goal for the month and year. Product helps you see
+              how many more days you need to work to reach your financial goal
+              for the month and year. Product helps you see how many more days
+              you need to work to reach your financial goal for the month and
+              year.
+            </p>
+          </li>
+          <li>
+            <h3>Fastest way to organize</h3>
+            <p>
+              Product helps you see how many more days you need to work to reach
+              your financial goal for the month and year. Product helps you see
+              how many more days you need to work to reach your financial goal
+              for the month and year. Product helps you see how many more days
+              you need to work to reach your financial goal for the month and
+              year.
+            </p>
+          </li>
+        </ul>
+      </section>
+
+      <section>
+        <h2>How Product Work?</h2>
+        <ul>
+          <li>
+            <img src="./images/screens/mac1-2.png" alt="Screen" width="500" />
+            <h4>STEP 1</h4>
+            <h3>Apply for a product</h3>
+            <p>
+              Completing our easy step-by-step application form gives you access
+              to multiple business with multiple products. We analyse your
+              business through our proprietary credit analysis technology
+            </p>
+          </li>
+          <li>
+            <h4>STEP 2</h4>
+            <h3>Pay fully refundable</h3>
+            <p>
+              Product will contactting you instantly to receive payment of the
+              Application Fee. if no offer of product is available, your fee
+              will be fully refunded.
+            </p>
+            <img src="./images/screens/mac2-2.png" alt="Screen" width="500" />
+          </li>
+          <li>
+            <img src="./images/screens/mac3-2.png" alt="Screen" width="500" />
+            <h4>STEP 3</h4>
+            <h3>Completion</h3>
+            <p>
+              Product will continue to liase between borrower and manager to
+              procees and complete a quick and efficient settlement
+            </p>
+          </li>
+        </ul>
+        <button type="button">Get in touch with us</button>
+      </section>
+
+      <section>
+        <h2>Join thousand of other who have already received offers</h2>
+        <ul>
+          <li>
+            <img
+              src="./images/placeholder/Image Placeholder-1.png"
+              alt="Graph"
+              width="150"
+            />
+            <h3>Business</h3>
+            <p>Cash Flow</p>
+            <p>Asset Backed</p>
+            <p>Receivables Finance</p>
+            <p>Find the best business product</p>
+          </li>
+          <li>
+            <img
+              src="./images/placeholder/Image Placeholder-2.png"
+              alt="Graph"
+              width="150"
+            />
+            <h3>Enterprise</h3>
+            <p>Site Acquisition</p>
+            <p>Bridge</p>
+            <p>Development Financing</p>
+            <p>Find the best business product</p>
+          </li>
+        </ul>
+      </section>
+
+      <section>
+        <h2 hidden>Promo</h2>
+        <p>Join 100 Compannies who boost their business with Product</p>
+        <img src="./images/graphics-2.png" alt="screen" width="351" />
+        <button type="button">Get This</button>
+      </section>
     </main>
+
+    <footer>
+      <a href="./index.html"
+        ><img src="./images/logo-2.png" alt="logo" width="40" />Product</a
+      >
+      <p>Resource</p>
+      <ul>
+        <li>
+          <p>About Us</p>
+        </li>
+        <li>
+          <p>Blog</p>
+        </li>
+        <li>
+          <p>Contact</p>
+        </li>
+        <li>
+          <p>FAQ</p>
+        </li>
+      </ul>
+      <p>Legal Stuff</p>
+      <ul>
+        <li>
+          <p>Disclaimer</p>
+        </li>
+        <li>
+          <p>Financing</p>
+        </li>
+        <li>
+          <p>Privacy Policy</p>
+        </li>
+      </ul>
+    </footer>
   </body>
 </html>
