--- a/pricing.html
+++ b/pricing.html
@@ -23,6 +23,178 @@
         <li><button type="button">Sign Up</button></li>
       </ul>
     </header>
-    im pricing
+
+    <main>
+      <section>
+        <h3>PRICING</h3>
+        <h1>Let's get some real work done here.</h1>
+        <p>
+          Prodict is your perfect solution for working. Get started now for free
+        </p>
+        <ul>
+          <li>
+            <h3>Free</h3>
+            <p>Brief price description</p>
+            <p>0</p>
+            <p>$</p>
+            <p>Per / month</p>
+            <ul>
+              <li>
+                <p>Only 2 Operators</p>
+              </li>
+              <li>
+                <p>Notifications</p>
+              </li>
+              <li>
+                <p>Landing Pages</p>
+              </li>
+            </ul>
+            <button type="button">Order Now</button>
+          </li>
+          <li>
+            <h3>Standard</h3>
+            <p>Brief price description</p>
+            <p>5</p>
+            <p>$</p>
+            <p>Per / month</p>
+            <ul>
+              <li>
+                <p>5+ Operators</p>
+              </li>
+              <li>
+                <p>Notifications</p>
+              </li>
+              <li>
+                <p>Landing Pages</p>
+              </li>
+            </ul>
+            <button type="button">Order Now</button>
+          </li>
+          <li>
+            <h3>Premium</h3>
+            <p>Brief price description</p>
+            <p>10</p>
+            <p>$</p>
+            <p>Per / month</p>
+            <ul>
+              <li>
+                <p>10+ Operators</p>
+              </li>
+              <li>
+                <p>Notifications</p>
+              </li>
+              <li>
+                <p>Landing Pages</p>
+              </li>
+            </ul>
+            <button type="button">Order Now</button>
+          </li>
+        </ul>
+      </section>
+
+      <section>
+        <h3>ENTERPRISE</h3>
+        <h2>Are you interested in a custom-tailored plan?</h2>
+        <p>
+          Product is a set of advanced features for really large teams with
+          projects.
+        </p>
+        <button type="button">Get in touch with us</button>
+      </section>
+
+      <section>
+        <h2>Product is being used with great effects alongside:</h2>
+        <img src="./images/amico.png" alt="devices" width="528" />
+        <ul>
+          <li>
+            <h3>Enterpreneur</h3>
+            <p>
+              Product is a great way to help medium and samall enterprise owners
+              achieve their goals
+            </p>
+          </li>
+          <li>
+            <h3>Accountants</h3>
+            <p>
+              Whether you are working on contract with clients, or on other key
+              accounting documents, Product is for you
+            </p>
+          </li>
+          <li>
+            <h3>Universities</h3>
+            <p>
+              Organize university projects and have documents easily graded
+              online with Product
+            </p>
+          </li>
+        </ul>
+      </section>
+
+      <section>
+        <h2>Frequently asked question</h2>
+        <p>Something is not clear? You need help? Check our FAQ section</p>
+        <ul>
+          <li>
+            <p>What are my payment option?</p>
+          </li>
+          <li>
+            <p>How can I invite collaborator to platform?</p>
+            <p>
+              After creating your account you will have an oppurtunity to create
+              your first project that will be associated withthe collaborators
+              e-mail. An invitation will be sent automatically. Then, invited
+              user will have to confirm his account by e-mail and finish userd
+              onboarding.
+            </p>
+          </li>
+          <li>
+            <p>Can I upgrade my plan?</p>
+          </li>
+          <li>
+            <p>Can I cancel my plan at anytime?</p>
+          </li>
+        </ul>
+      </section>
+
+      <section>
+        <h2 hidden>Promo</h2>
+        <p>Join 100 Compannies who boost their business with Product</p>
+        <img src="./images/graphics-2.png" alt="screen" width="351" />
+        <button type="button">Get This</button>
+      </section>
+    </main>
+
+    <footer>
+      <a href="./index.html"
+        ><img src="./images/logo-2.png" alt="logo" width="40" />Product</a
+      >
+      <p>Resource</p>
+      <ul>
+        <li>
+          <p>About Us</p>
+        </li>
+        <li>
+          <p>Blog</p>
+        </li>
+        <li>
+          <p>Contact</p>
+        </li>
+        <li>
+          <p>FAQ</p>
+        </li>
+      </ul>
+      <p>Legal Stuff</p>
+      <ul>
+        <li>
+          <p>Disclaimer</p>
+        </li>
+        <li>
+          <p>Financing</p>
+        </li>
+        <li>
+          <p>Privacy Policy</p>
+        </li>
+      </ul>
+    </footer>
   </body>
 </html>
