--- a/index.html
+++ b/index.html
@@ -4,61 +4,129 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Product</title>
+
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
+      integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+
+    <link rel="stylesheet" href="./css/styles.css" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Montserrat:wght@100..900&family=Poppins:wght@400;500;600;700;800;900&family=Roboto:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
   </head>
+
   <body>
-    <header>
-      <nav>
-        <a href="./index.html"
-          ><img src="./images/logo-2.png" alt="logo" width="40" />Product</a
-        >
-        <ul>
-          <li><a href="./index.html">Product</a></li>
-          <li><a href="./pricing.html">Pricing</a></li>
-          <li><a href="./customers.html">Customers</a></li>
-          <li><a href="./resources.html">Resources</a></li>
+    <header class="header">
+      <div class="conteiner header-conteiner">
+        <nav class="header-nav">
+          <a class="header-logo" href="./index.html"
+            ><img
+              class="header-logo-image"
+              src="./images/logo-2.png"
+              alt="logo"
+              width="40"
+            />Product</a
+          >
+          <ul class="header-nav-list">
+            <li class="header-nav-item">
+              <a class="header-nav-link current" href="./index.html">Product</a>
+            </li>
+            <li class="header-nav-item">
+              <a class="header-nav-link" href="./pricing.html">Pricing</a>
+            </li>
+            <li class="header-nav-item">
+              <a class="header-nav-link" href="./customers.html">Customers</a>
+            </li>
+            <li class="header-nav-item">
+              <a class="header-nav-link" href="./resources.html">Resources</a>
+            </li>
+          </ul>
+        </nav>
+        <ul class="header-button-list">
+          <li class="header-button-item">
+            <button class="header-button btn-sign-in" type="button">
+              Sign In
+            </button>
+          </li>
+          <li class="header-button-item">
+            <button class="header-button btn-sign-up" type="button">
+              Sign Up
+            </button>
+          </li>
         </ul>
-      </nav>
-      <ul>
-        <li><button type="button">Sign In</button></li>
-        <li><button type="button">Sign Up</button></li>
-      </ul>
+      </div>
     </header>
 
-    <main>
-      <section>
-        <h1>Work at the speed of thought</h1>
-        <p>
-          Tools, tutorials, design and innovation experts, all in one place! The
-          most intuitive way to imagine your next user experience.
-        </p>
-        <ul>
-          <li><button type="button">Get started</button></li>
-          <li><button type="button">Watch the Video</button></li>
-        </ul>
-        <img src="./images/hero-img-2.png" alt="People" width="610" />
+    <main class="main">
+      <section class="hero">
+        <div class="conteiner hero-conteiner">
+          <div class="hero-info">
+            <h1 class="hero-titel">Work at the speed of thought</h1>
+            <p class="hero-text">
+              Tools, tutorials, design and innovation experts, all in one place!
+              The most intuitive way to imagine your next user experience.
+            </p>
+            <ul class="hero-button-list">
+              <li class="hero-button-item">
+                <button class="hero-button-get" type="button">
+                  Get started
+                </button>
+              </li>
+              <li class="hero-button-item">
+                <button class="hero-button-video" type="button">
+                  Watch the Video
+                </button>
+              </li>
+            </ul>
+          </div>
+          <img
+            class="hero-image"
+            src="./images/hero-img-2.png"
+            alt="People"
+            width="610"
+          />
+        </div>
       </section>
 
-      <section>
-        <h2>Product was Built Specifically for You</h2>
-        <ul>
-          <li>
-            <h3>First click tests</h3>
-            <p>While most people enjoy casino gambling,</p>
-          </li>
-          <li>
-            <h3>Design surveys</h3>
-            <p>Sports betting, lottery and bingo playing for the fun</p>
-          </li>
-          <li>
-            <h3>Preference tests</h3>
-            <p>The Myspace page defines the individual.</p>
-          </li>
-          <li>
-            <h3>Five second tests</h3>
-            <p>Personal choices and the overall personality of the person.</p>
-          </li>
-        </ul>
-        <button type="button">SIGN UP NOW</button>
+      <section class="feature">
+        <div class="conteiner">
+          <h2 class="feature-title">Product was Built Specifically for You</h2>
+          <ul class="feature-list">
+            <li class="feature-item">
+              <h3 class="feature-subtitle">First click tests</h3>
+              <p class="features-text">
+                While most people enjoy casino gambling,
+              </p>
+            </li>
+            <li class="feature-item">
+              <h3 class="feature-subtitle">Design surveys</h3>
+              <p class="features-text">
+                Sports betting, lottery and bingo playing for the fun
+              </p>
+            </li>
+            <li class="feature-item">
+              <h3 class="feature-subtitle">Preference tests</h3>
+              <p class="features-text">
+                The Myspace page defines the individual.
+              </p>
+            </li>
+            <li class="feature-item">
+              <h3 class="feature-subtitle">Five second tests</h3>
+              <p class="features-text">
+                Personal choices and the overall personality of the person.
+              </p>
+            </li>
+          </ul>
+          <button class="feature-button" type="button">SIGN UP NOW</button>
+        </div>
       </section>
 
       <section>
